# BlobFollower

./: CMakeLists.txt  README.md
include/: config.h  my_bot.h  utils.hpp
src/: follow_behind.cpp  kalman.cpp  my_bot.cpp  utils.cpp
worlds/: ant.world  sick.inc  simple.world
